API-345: aggregate all wages (#1039)
* create eligibility directory and post

* have better plan for pulling data from models

* Updated \eligibility api request body. Removed date regex, instead use openapi date validation

* added test

* update eliegiblity response object. cleanup git pull

* created response for no wage data found

* added error response for data not found

* fix spelling

* fix spelling

* revert some changes from git pull

* lint issue

* removed the module under pfml, handler moved to api/eligibility module

* updated eligibility handler to new location, updated openAPI

* change api handler file name

* added method to calculate total wage

* update handler response when total wage is present

* update docker-compose to include dor_mock folder path

* added test for calculating total wages

* updated test for total wages

* update total wage logic

* update handler to include total and weekly average wage

* clean up

* updated test for handler and wages

* fix lint

* use number for total wages

* updated test for handler

* cleanup

* clean up

* get state_average and unemployment data from state_mteric table

* clean up

* fix format, clean up import error

* fix format

* format fix

* change return type

* cast string to uuid. check if state_metric return data

* add StatusCode NotFond as part of error_response

* found total wages to 2 decimal digits

* fix lint
